[package]
name = "autotiling-rs"
version = "0.1.8"
authors = ["Jason Nader <jason.nader@protonmail.com>"]
description = "Autotiling for sway (and possibly i3)"
edition = "2018"

[dependencies]
swayipc = "3.0"

anyhow = "1.0"
log = "0.4"
env_logger = "0.10"

[dependencies.clap]
version = "4.5"
default-features = false
features = ["std", "derive", "usage", "help", "suggestions"]

[profile.release]
strip = true
opt-level = "s"
lto = true
